[gd_scene load_steps=10 format=3 uid="uid://g85u8a4h35t7"]

[ext_resource type="Script" path="res://scenes/GUI/LevelSelect.gd" id="1_ltf8v"]
[ext_resource type="Texture2D" uid="uid://52m4u7hwjhpv" path="res://textures/backgrounds/Free-Summer-Pixel-Art-Backgrounds/PNG/summer6/1.png" id="2_jtgjg"]
[ext_resource type="PackedScene" uid="uid://d1khuliacatv8" path="res://scenes/GUI/LevelButton.tscn" id="2_xo273"]
[ext_resource type="Texture2D" uid="uid://c5h1f6s82occ0" path="res://textures/backgrounds/Free-Summer-Pixel-Art-Backgrounds/PNG/summer6/2.png" id="3_1djnp"]
[ext_resource type="Texture2D" uid="uid://cpuqnv8a1cnt3" path="res://textures/backgrounds/Free-Summer-Pixel-Art-Backgrounds/PNG/summer6/3.png" id="4_erpoe"]
[ext_resource type="Texture2D" uid="uid://dgdaktmwjapa5" path="res://textures/backgrounds/Free-Summer-Pixel-Art-Backgrounds/PNG/summer6/4.png" id="5_sku8v"]
[ext_resource type="Texture2D" uid="uid://cvantrtsnados" path="res://textures/backgrounds/Free-Summer-Pixel-Art-Backgrounds/PNG/summer6/5.png" id="6_vpiyb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bslq1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cytnu"]
border_width_top = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[node name="LevelSelect" type="Node"]
script = ExtResource("1_ltf8v")

[node name="Parallax" type="Node2D" parent="."]

[node name="Parallax2D" type="Parallax2D" parent="Parallax"]
repeat_size = Vector2(1280, 0)
autoscroll = Vector2(-2, 0)

[node name="TextureRect" type="TextureRect" parent="Parallax/Parallax2D"]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_jtgjg")
expand_mode = 2

[node name="Parallax2D2" type="Parallax2D" parent="Parallax"]
repeat_size = Vector2(1280, 0)
autoscroll = Vector2(-5, 0)

[node name="TextureRect" type="TextureRect" parent="Parallax/Parallax2D2"]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("3_1djnp")
expand_mode = 2

[node name="Parallax2D3" type="Parallax2D" parent="Parallax"]
repeat_size = Vector2(1280, 0)
autoscroll = Vector2(-10, 0)

[node name="TextureRect" type="TextureRect" parent="Parallax/Parallax2D3"]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("4_erpoe")

[node name="Parallax2D4" type="Parallax2D" parent="Parallax"]
repeat_size = Vector2(1280, 0)
autoscroll = Vector2(-15, 0)

[node name="TextureRect" type="TextureRect" parent="Parallax/Parallax2D4"]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("5_sku8v")
expand_mode = 2

[node name="Parallax2D5" type="Parallax2D" parent="Parallax"]
repeat_size = Vector2(1280, 0)
autoscroll = Vector2(-20, 0)

[node name="TextureRect" type="TextureRect" parent="Parallax/Parallax2D5"]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("6_vpiyb")
expand_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_bslq1")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 128
text = "Level Select"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18
theme_override_styles/separator = SubResource("StyleBoxFlat_cytnu")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="LevelsContainer" type="HFlowContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 100

[node name="Button4" parent="PanelContainer/VBoxContainer/MarginContainer/LevelsContainer" instance=ExtResource("2_xo273")]
layout_mode = 2

[node name="Button5" parent="PanelContainer/VBoxContainer/MarginContainer/LevelsContainer" instance=ExtResource("2_xo273")]
layout_mode = 2

[node name="Button6" parent="PanelContainer/VBoxContainer/MarginContainer/LevelsContainer" instance=ExtResource("2_xo273")]
layout_mode = 2

[node name="Button7" parent="PanelContainer/VBoxContainer/MarginContainer/LevelsContainer" instance=ExtResource("2_xo273")]
layout_mode = 2

[node name="Button8" parent="PanelContainer/VBoxContainer/MarginContainer/LevelsContainer" instance=ExtResource("2_xo273")]
layout_mode = 2

[node name="Button9" parent="PanelContainer/VBoxContainer/MarginContainer/LevelsContainer" instance=ExtResource("2_xo273")]
layout_mode = 2

[node name="Button10" parent="PanelContainer/VBoxContainer/MarginContainer/LevelsContainer" instance=ExtResource("2_xo273")]
layout_mode = 2

[node name="Button11" parent="PanelContainer/VBoxContainer/MarginContainer/LevelsContainer" instance=ExtResource("2_xo273")]
layout_mode = 2

[node name="ReturnToMenuButton" type="Button" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Back to Menu"

[node name="TotalStarsLabel" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 64
text = "Total Stars: 50"
